# gsuite-wrapper

./: .gitignore  README.md  pyproject.toml  reauthorize.py
docs/: ANALYTICS_README.md  GMAIL_README.md  account_manager.md  text_conversion.md
src/mcp_gsuite/: __init__.py  account_manager.py  analytics.py  gauth.py  gmail.py  server.py  text_conversion.py  tools_analytics.py
tests/: test_text_conversion.py
