[project]
name = "mcp-gsuite"
version = "0.4.11"
description = "Google Workspace integration for Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "beautifulsoup4>=4.12.3",
 "google-api-python-client>=2.154.0",
 "html2text>=2020.1.16",
 "httplib2>=0.22.0",
 "mcp>=1.3.0",
 "oauth2client==4.1.3",
 "pdfplumber>=0.10.3",
 "pytest>=8.3.5",
 "python-dotenv>=1.0.1",
 "pytz>=2024.2",
 "requests>=2.32.3",
]
[[project.authors]]
name = "Markus Pfundstein"
email = "markus@life-electronic.nl"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]

[project.scripts]
mcp-gsuite = "mcp_gsuite:main"
