[project]
name = "mcp-gsuite"
version = "0.4.14"
description = "Google Workspace API Wrapper"
authors = [
    { name = "Gleb Reutov", email = "glebreutov@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.154.0",
    "httplib2>=0.22.0",
    "mcp>=1.3.0",
    "oauth2client==4.1.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]

[project.scripts]
mcp-gsuite = "mcp_gsuite.server:main"
